# SPL3-Client

./: CMakeLists.txt
Client/: makefile
Client/include/: ClientWriter.h  ConnectionHandler.h
Client/src/: ClientListener.cpp  ClientWriter.cpp  ConnectionHandler.cpp  EchoClient.cpp
Client/test/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  test.sh
testFiles/input/: input1
testFiles/output/: output1- oneClient
testFiles/result/: result
